[package]
name = "shuriken-bindings"
version = "1.0.2"
authors = ["Julien Gamba <julien@jgamba.eu>"]
edition = "2024"
license = "Apache-2.0"
description = "Safe bindings for the [Shuriken bytecode analyzer"
homepage = "https://github.com/lukhio/shuriken-bindings"
repository = "https://github.com/lukhio/shuriken-bindings"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.71.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
